css/colorscheme-oceanside.css
/**
 * CA State Template v5.5 -  @version v5.5.2 -  2/21/2019 
  STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
/* -----------------------------------------
   OCEANSIDE
----------------------------------------- */
/* ----- OCEANSIDE PRIMARY THEME COLORS -----  */
.color-highlight, .color-p1 {
  color: #FDB81E;
}

.color-primary, .color-p2 {
  color: #046B99;
}

.color-standout, .color-p3 {
  color: #323A45;
}

.bg-highlight, .bg-p1 {
  background-color: #FDB81E !important;
}

.bg-primary, .bg-p2 {
  background-color: #046B99 !important;
}

.bg-standout, .bg-p3 {
  background-color: #323A45 !important;
}

/*  SECONDARY THEME COLORS	*/
.color-s1 {
  color: #E1F2F7;
}

.color-s2 {
  color: #9FDBF1;
}

.color-s3 {
  color: #50aee4;
}

.bg-s1 {
  background-color: #E1F2F7 !important;
}

.bg-s2 {
  background-color: #9FDBF1 !important;
}

.bg-s3 {
  background-color: #50aee4 !important;
}

/* -----------------------------------------
   LAYOUT
   /source/scss/colorscheme/layout.scss
----------------------------------------- */
/* Primary page with/without two-column */
.primary {
  /* Primary page with two column */
}

.primary.two-column {
  /* Main content contains 2col bg and footer bg */
}

.primary.two-column .main-content {
  background-color: #fff;
}

/* -----------------------------------------
   GLOBAL HEADER
   /source/scss/colorscheme/global-header.scss
----------------------------------------- */
.utility-header {
  background: #046B99;
  color: #ffffff;
}

@media (max-width: 767px) {
  .nav-full-width-icons .settings-links .utility-links a, .nav-full-width-icons .settings-links .utility-links button {
    border: 1px solid #046B99;
    color: #046B99;
  }
}

.global-header {
  /* Default header pattern */
  /* Small screen gets solid color */
}

.explore-invite a:hover span[class^="ca-gov-icon-"] {
  color: #FDB81E;
}

.explore-invite a:hover .explore-title {
  color: #FDB81E;
}

/* -----------------------------------------
   GLOBAL FOOTER
   /source/scss/colorscheme/global-footer.scss
----------------------------------------- */
.global-footer {
  background: #222222;
}

/* Targets icon of first h1 on the page  */
h1 span[class^="ca-gov-icon-"]:first-child {
  color: #046B99;
}

/* -----------------------------------------
   NAVIGATION
   /source/scss/colorscheme/cs-navigation.scss
----------------------------------------- */
.navigation-search {
  border-bottom-color: #FDB81E;
}

.mobile-controls {
  background: #fff;
}

.toggle-menu span {
  background-color: #046B99 !important;
}

.mobile-control {
  color: #046B99;
}

.mobile-control a {
  color: #046B99;
  text-decoration: none;
}

.mobile-control.toggle-sub-nav {
  color: #9fc7da;
  background-color: #eef5f8;
}

.mobile-control.toggle-sub-nav:hover, .mobile-control.toggle-sub-nav:focus {
  outline: none;
  background-color: #F5F9FB;
}

.nav-item.active > a {
  color: #046B99;
}

.nav-item.active > a > span[class^="ca-gov-icon"] {
  color: #046B99;
}

@media (min-width: 768px) {
  .nav-item:hover, .nav-item:focus {
    background-color: #F5F9FB;
  }
}

.nav-item:hover > a, .nav-item:focus > a {
  color: #046B99;
}

.nav-item:hover > a > span[class^="ca-gov-icon"], .nav-item:focus > a > span[class^="ca-gov-icon"] {
  color: #046B99;
}

.nav-arrow-down {
  background: #046B99;
}

.first-level-link {
  color: #555555;
}

.first-level-link > span[class^="ca-gov-icon"] {
  /* Navigation icons */
  color: #9fc7da;
}

@media (max-width: 767px) {
  .first-level-link {
    border-bottom: 1px solid #E1F2F7;
  }
}

.second-level-link {
  color: #046B99;
}

.second-level-link [class^="ca-gov-icon-"] {
  color: #046B99;
}

.second-level-nav > li {
  border: 1px solid transparent;
  border-right: 4px solid #fff;
  border-bottom: 4px solid #fff;
}

.second-level-nav > li:hover, .second-level-nav > li:focus {
  background: #fff;
}

@media (max-width: 767px) {
  .second-level-nav > li {
    border-right: none;
    border-bottom: 1px solid #E1F2F7;
  }
  .second-level-nav > li:hover, .second-level-nav > li:focus {
    background: #fcfdfe;
  }
}

.second-level-nav .link-description {
  color: #555555;
}

.sub-nav {
  background: #F5F9FB;
}

@media (max-width: 767px) {
  .sub-nav {
    border-top: none;
    border-bottom: none;
  }
}

.nav-media {
  background: transparent;
}

.nav-media .media:hover {
  background: #fff;
}

.nav-media .media {
  border-bottom: 4px solid #fff;
}

@media (max-width: 767px) {
  .nav-media .media {
    border-bottom: 4px solid #fff;
  }
  .nav-media .media:hover, .nav-media .media:focus {
    background: #fcfdfe;
  }
}

@media (min-width: 768px) {
  .nav-item::after {
    background-color: transparent;
  }
  .nav-item:hover::after, .nav-item:focus::after {
    background-color: #046B99;
  }
  /*full width navigation*/
  .nav-full-width {
    background: #046B99;
  }
  .nav-full-width .main-navigation .nav-item:hover, .nav-full-width .main-navigation .nav-item:focus, .nav-full-width .main-navigation .nav-item.active:hover {
    background-color: #034f71;
  }
  .nav-full-width .main-navigation .nav-item.active {
    background-color: #035a80;
  }
}

.has-sub .rotate {
  color: #50aee4;
}

/* -----------------------------------------
   SEARCH
   /source/scss/colorscheme.search.scss
----------------------------------------- */
.search-container .search-textfield {
  background-color: rgba(255, 255, 255, 0.8);
}

.search-container .submit-container button {
  color: #046B99;
  border-color: rgba(255, 255, 255, 0.8);
}

.search-container:hover .search-textfield, .search-container:focus .search-textfield, .search-container.active .search-textfield {
  background-color: #fff;
}

.search-container:hover .submit-container button, .search-container:focus .submit-container button, .search-container.active .submit-container button {
  border-color: #fff;
}

.search-container.active {
  background: rgba(0, 0, 0, 0.7);
}
/* ... */

